feat: added new links to HTML pages - Added new links to empire.html - Added new links to marta.html - Added new links to room.html

--- a/room.html
+++ b/room.html
@@ -47,14 +47,15 @@
 
             <div class="project-details">
                 <h1 class="title-1">Landing page</h1>
-                <img class="project-details__cover" src="./img/projects/02-big.jpg" alt="">
-
+                <a href="https://uniquetsunade.github.io/room_landing_page/">
+                    <img class="project-details__cover" src="./img/projects/02-big.jpg" alt="">
+                </a>
                 <div class="project-details__desc">
                     <p><span>Skills:</span> HTML, SCSS, JavaScript, BEM, Responsive interface</p>
                     <p> <span>Libraries & Frameworks:</span> GSAP, Swiper</p>
                 </div>
 
-                <a class="btn-outline" href="https://uniquetsunade.github.io/room_landing_page/">
+                <a class="btn-outline" href="https://github.com/UniqueTsunade/room_landing_page">
                     <img src="./img/icons/gitHub-black.svg" alt="">
                     GitHub repo
                 </a>
