--- a/marta.html
+++ b/marta.html
@@ -47,14 +47,15 @@
 
             <div class="project-details">
                 <h1 class="title-1">Landing page</h1>
-                <img class="project-details__cover" src="./img/projects/03-big.jpg" alt="">
-
+                <a href="https://uniquetsunade.github.io/Marta-Benet/">
+                    <img class="project-details__cover" src="./img/projects/03-big.jpg" alt="">
+                </a>
                 <div class="project-details__desc">
                     <p><span>Skills:</span> HTML, SCSS, JavaScript, Gulp, BEM, Responsive interface</p>
                     <p> <span>Libraries & Frameworks:</span> GSAP, Swiper</p>
                 </div>
 
-                <a class="btn-outline" href="https://uniquetsunade.github.io/Marta-Benet/">
+                <a class="btn-outline" href="https://github.com/UniqueTsunade/Marta-Benet">
                     <img src="./img/icons/gitHub-black.svg" alt="">
                     GitHub repo
                 </a>
