feat: two new files have been added: portfolio.html and bank.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,64 +36,31 @@
                         <a href="./contacts.html" class="nav-list__link">Contacts</a>
                     </li>
                 </ul>
+
             </div>
         </div>
     </nav>
 
-    <header class="header">
-
-            <div class="header__wrapper">
-                <h1 class="header__title">
-                    <strong>Hi, my name is <em>Kate</em></strong><br>
-                    a frontend developer
-                </h1>
-
-            </div>
-
-    </header>
 
     <main class="section">
         <div class="container">
-            <h2 class="title-1">Projects</h2>
 
-            <ul class="projects">
+            <div class="project-details">
+                <h1 class="title-1">Landing page</h1>
+                <a href="https://uniquetsunade.github.io/engineer-portfolio/">
+                    <img class="project-details__cover" src="./img/projects/05-big.jpg" alt="">
+                </a>
+                <div class="project-details__desc">
+                    <p><span>Skills:</span> HTML, SCSS, JavaScript, Gulp, BEM, Responsive interface</p>
+                    <p> <span>Libraries & Frameworks:</span> Three.js, Swiper, GSAP</p>
+                </div>
 
-                <li class="project">
-                    <a href="./portfolio.html">
-                        <img src="./img/projects/05.jpg" alt="Portfolio">
-                        <h3 class="project__title">Portfolio</h3>
-                    </a>
-                </li>
+                <a class="btn-outline" href="https://github.com/UniqueTsunade/engineer-portfolio">
+                    <img src="./img/icons/gitHub-black.svg" alt="">
+                    GitHub repo
+                </a>
+            </div>
 
-                <li class="project">
-                    <a href="./bank.html">
-                        <img src="./img/projects/04.jpg" alt="Landing page">
-                        <h3 class="project__title">Landing page</h3>
-                    </a>
-                </li>
-
-                <li class="project">
-                    <a href="./room.html">
-                        <img src="./img/projects/02.jpg" alt="Landing page">
-                        <h3 class="project__title">Landing page</h3>
-                    </a>
-                </li>
-
-                <li class="project">
-                    <a href="./marta.html">
-                    <img src="./img/projects/03.jpg" alt="Landing page">
-                    <h3 class="project__title">Landing page</h3>
-                    </a>
-                </li>
-
-                <li class="project">
-                    <a href="./empire.html">
-                        <img src="./img/projects/01.jpg" alt="Landing page">
-                        <h3 class="project__title">Landing page</h3>
-                    </a>
-                </li>
-
-            </ul>
         </div>
     </main>
 
